[tool.poetry]
name = "poker-dapp-backend"
version = "0.1.0"
description = "Poker dapp Python backend for off-chain computation"
authors = ["Lawrence Lim <ll4715@nyu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
redis = "^5.0.1"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
poker = "^0.30.0"
pokerkit = "^0.3.0"
pokerlib = "^2.2.7"


[tool.poetry.group.dev.dependencies]
typer-cli = "^0.0.13"
black = "^23.10.1"
ruff = "^0.1.3"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
