[tool.poetry]
name = "poker-dapp-backend"
version = "0.1.0"
description = ""
authors = ["Lawrence Lim <ll4715@nyu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.1"
libnum = "^1.7.1"
pokerlib = "^2.2.7"
websockets = "^12.0"
pytest = "^7.4.3"
fastapi = "^0.104.1"
cryptography = "^41.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
